sign up completed

--- a/src/main/resources/templates/lecture1.html
+++ b/src/main/resources/templates/lecture1.html
@@ -26,24 +26,14 @@
     </ul>
 
   </div>
-  <button class="btn btn-outline-primary my-2 my-sm-0 d-flex align-items-center" type="button">
-    <img src="account.png" alt="Profile Photo" class="rounded-circle" width="30" height="30">
+  <button class="btn btn-outline-primary my-2 my-sm-0 d-flex align-items-center" type="button" onclick="location.href='signUp.html'">
+    <img src="images/account.png" alt="Profile Photo" class="rounded-circle" width="30" height="30">
   </button>
 </nav>
 
 <div class="container mt-4">
-  <table>
-    <tr>
-      <td style="font-size: 30px;">
-        <a class="nav-link" style="color:white" href="lecture1.html">Lecture 1</a>
-      </td>
-    </tr>
-    <tr>
-      <td style="font-size: 30px;">
-        <a class="nav-link" style="color:white" href="lecture2.html">Lecture 2</a>
-      </td>
-    </tr>
-  </table>
+  <object data="react-slides.pdf" type="application/pdf" width="100%" height="700px">
+  </object>
 </div>
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
