--- a/src/main/resources/templates/mainPage.html
+++ b/src/main/resources/templates/mainPage.html
@@ -27,7 +27,7 @@
 
     </div>
     <button class="btn btn-outline-primary my-2 my-sm-0 d-flex align-items-center" type="button">
-        <img src="images/account.png" alt="Profile Photo" class="rounded-circle" width="30" height="30">
+        <img src="../static/account.png" alt="Profile Photo" class="rounded-circle" width="30" height="30">
     </button>
 </nav>
 
