--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Learn Python</title>
-  <link rel="icon" type="image/x-icon" href="/templates/images/python-logo.png">
+  <link rel="icon" type="image/x-icon" href="/python-logo.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;600&display=swap" rel="stylesheet">
@@ -28,7 +28,7 @@
     </ul>
   </div>
   <button class="btn btn-outline-primary my-2 my-sm-0 d-flex align-items-center" type="button" aria-label="Profile">
-    <img src="/templates/images/account.png" alt="Profile Photo" class="rounded-circle" width="30" height="30">
+    <img src="/account.png" alt="Profile Photo" class="rounded-circle" width="30" height="30">
   </button>
 </nav>
 
