--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,11 +1,50 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-  <h1>Signed in</h1>
+    <title>Login</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 </head>
-<body>
-
+<body style="background-color: #B0C4DE">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+            <li class="nav-item active">
+                <a class="nav-link" href="#home" style="font-size:25px; color: #555;">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="material.html" style="font-size:25px; color: #555;">Material</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#quiz" style="font-size:25px; color: #555;">Quiz</a>
+            </li>
+        </ul>
+    </div>
+    <button class="btn btn-outline-primary my-2 my-sm-0 d-flex align-items-center" type="button" aria-label="Profile">
+        <img src="/account.png" alt="Profile Photo" class="rounded-circle" width="30" height="30">
+    </button>
+</nav>
+<div class="container mt-5">
+    <h2>Login</h2>
+    <div th:if="${errorMessage}" class="alert alert-danger" style="width:300px;">
+        <img src="/error.png" alt="Error" width="20" height="20">
+        <span th:text="${errorMessage}"></span>
+    </div>
+    <form th:action="@{/api/login}" method="post" th:object="${user}">
+        <div class="form-group">
+            <label for="username">Username:</label>
+            <input th:field="*{username}" type="text" id="username" name="username" class="form-control" style="width: 300px;" required>
+        </div>
+        <div class="form-group">
+            <label for="password">Password:</label>
+            <input th:field="*{password}" type="password" id="password" name="password" class="form-control" style="width: 300px;" required>
+        </div>
+        <br>
+        <button type="submit" class="btn btn-primary">Login</button><br><br>
+    </form>
+    <div>
+        <p class="form-footer">Don't have an account? <a th:href="@{/api/signup}">Register here.</a></p>
+    </div>
+</div>
 </body>
 </html>
