--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,37 +6,19 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 </head>
 <body style="background-color: #B0C4DE">
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-            <li class="nav-item active">
-                <a class="nav-link" href="#home" style="font-size:25px; color: #555;">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="material.html" style="font-size:25px; color: #555;">Material</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#quiz" style="font-size:25px; color: #555;">Quiz</a>
-            </li>
-        </ul>
-    </div>
-    <button class="btn btn-outline-primary my-2 my-sm-0 d-flex align-items-center" type="button" aria-label="Profile">
-        <img src="/account.png" alt="Profile Photo" class="rounded-circle" width="30" height="30">
-    </button>
-</nav>
 <div class="container mt-5">
-    <h2>Login</h2>
+    <h2>Login</h2><br>
     <div th:if="${errorMessage}" class="alert alert-danger" style="width:300px;">
         <img src="/error.png" alt="Error" width="20" height="20">
         <span th:text="${errorMessage}"></span>
     </div>
     <form th:action="@{/api/login}" method="post" th:object="${user}">
         <div class="form-group">
-            <label for="username">Username:</label>
+            <label for="username" style="font-size:20px;">Username:</label>
             <input th:field="*{username}" type="text" id="username" name="username" class="form-control" style="width: 300px;" required>
         </div>
         <div class="form-group">
-            <label for="password">Password:</label>
+            <label for="password" style="font-size:20px;">Password:</label>
             <input th:field="*{password}" type="password" id="password" name="password" class="form-control" style="width: 300px;" required>
         </div>
         <br>
