--- a/src/main/resources/templates/material.html
+++ b/src/main/resources/templates/material.html
@@ -3,44 +3,41 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bootstrap Simple Menu Example</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="style.css">
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+  <title>Material</title>
+  <link rel="icon" type="image/x-icon" href="/python-logo.png">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 </head>
-<body style="background-color: #8697CA">
+<body style="background-color: #B0C4DE">
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav items">
       <li class="nav-item active">
-        <a class="nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" style="font-size:25px; color: #555;" th:href="@{/api/{username}/home(username=${username})}">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="material.html">Material</a>
+        <a class="nav-link" style="font-size:25px; color: #555;" th:href="@{/api/{username}/material(username=${username})}">Material</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#quiz">Quiz</a>
+        <a class="nav-link" style="font-size:25px; color: #555;" th:href="@{/api/{username}/quiz(username=${username})}">Quiz</a>
       </li>
     </ul>
 
   </div>
-  <button class="btn btn-outline-primary my-2 my-sm-0 d-flex align-items-center" type="button">
-    <img src="../static/account.png" alt="Profile Photo" class="rounded-circle" width="30" height="30">
-  </button>
+  <a th:href="@{/api/{username}/dashboard(username=${username})}" class="btn btn-outline-primary my-2 my-sm-0 d-flex align-items-center">
+    <img src="/account.png" alt="Profile Photo" class="rounded-circle" width="30" height="30">
+  </a>
 </nav>
 
 <div class="container mt-4">
   <table>
     <tr>
       <td style="font-size: 30px;">
-        <a class="nav-link" style="color:white" href="lecture1.html">Lecture 1</a>
+        <a class="nav-link" style="color:white" th:href="@{/api/{username}/lecture1(username=${username})}">Lecture 1</a>
       </td>
     </tr>
     <tr>
       <td style="font-size: 30px;">
-        <a class="nav-link" style="color:white" href="lecture2.html">Lecture 2</a>
+        <a class="nav-link" style="color:white" th:href="@{/api/{username}/lecture2(username=${username})}">Lecture 2</a>
       </td>
     </tr>
   </table>
