--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -12,26 +12,7 @@
   <link rel="stylesheet" type="text/css" href="style.css">
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body style="background-color: #8697CA">
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="material.html">Material</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#quiz">Quiz</a>
-      </li>
-    </ul>
-  </div>
-  <button class="btn btn-outline-primary my-2 my-sm-0 d-flex align-items-center" type="button" aria-label="Profile">
-    <img src="/account.png" alt="Profile Photo" class="rounded-circle" width="30" height="30">
-  </button>
-</nav>
-
+<body style="background-color: #B0C4DE">
 <div class="container mt-4">
   <div class="row justify-content-center" style="margin-top:50px;">
     <div class="col-md-6">
