--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Login</title>
+    <link rel="icon" type="image/x-icon" href="/python-logo.png">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 </head>
 <body style="background-color: #B0C4DE">
-<div class="container mt-5">
+<div class="row justify-content-center align-items-center" style="margin-top:25px;">
+<div>
     <h2>Login</h2><br>
     <div th:if="${errorMessage}" class="alert alert-danger" style="width:300px;">
         <img src="/error.png" alt="Error" width="20" height="20">
@@ -27,6 +29,7 @@
     <div>
         <p class="form-footer">Don't have an account? <a th:href="@{/api/signup}">Register here.</a></p>
     </div>
+</div>
 </div>
 </body>
 </html>
