--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -14,11 +14,12 @@
 </head>
 <body style="background-color: #B0C4DE">
 <div class="container mt-4">
-  <div class="row justify-content-center" style="margin-top:50px;">
+  <div class="row justify-content-center" style="margin-top:25px;">
     <div class="col-md-6">
-      <h2 >Sign Up</h2>
-      <div th:if="${errorMessage}" class="alert alert-danger">
-        <p th:text="${errorMessage}"></p>
+      <h2 style="text-align: center">Sign Up</h2>
+      <div th:if="${errorMessage}" class="alert alert-danger d-flex align-items-center">
+        <img src="/error.png" alt="Error" width="20" height="20" class="mr-2">
+        <span th:text="${errorMessage}"></span>
       </div>
       <form th:action="@{/api/signup}" method="post" th:object="${user}">
         <div class="form-group">
