--- a/src/main/resources/templates/material.html
+++ b/src/main/resources/templates/material.html
@@ -32,12 +32,17 @@
   <table>
     <tr>
       <td style="font-size: 30px;">
-        <a class="nav-link" style="color:white" th:href="@{/api/{username}/lecture1(username=${username})}">Lecture 1</a>
+        <a class="nav-link" style="color:black" href="/pythonBeginner.pdf" target="_blank">Introduction to Python</a>
       </td>
     </tr>
     <tr>
       <td style="font-size: 30px;">
-        <a class="nav-link" style="color:white" th:href="@{/api/{username}/lecture2(username=${username})}">Lecture 2</a>
+        <a class="nav-link" style="color:black" href="/pythonIntermediate.pdf" target="_blank">Enhancing Your Python Skills</a>
+      </td>
+    </tr>
+    <tr>
+      <td style="font-size: 30px;">
+        <a class="nav-link" style="color:black" href="/pythonExpert.pdf" target="_blank">Advanced Python Programming: Mastering the Language</a>
       </td>
     </tr>
   </table>
