--- a/src/main/resources/templates/lecture1.html
+++ b/src/main/resources/templates/lecture1.html
@@ -26,7 +26,9 @@
   </a>
 </nav>
 <div class="container mt-4">
-  <object data="/python-beginner.pdf" type="application/pdf" width="100%" height="800px">
+  <object data="/pythonBeginner.pdf" type="application/pdf" width="100%" height="800px">
+    Your browser does not support PDFs.
+    <a href="/pythonBeginner.pdf">Click here to download the PDF</a>.
   </object>
 </div>
 
