--- a/src/main/resources/templates/lecture1.html
+++ b/src/main/resources/templates/lecture1.html
@@ -1,30 +1,12 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html layout:decorate="Layouts/defaultLayout" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lecture 1</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 </head>
-<body style="background-color: #B0C4DE">
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav items">
-      <li class="nav-item active">
-        <a class="nav-link" style="font-size:25px; color: #555;" th:href="@{/api/{username}/home(username=${username})}">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" style="font-size:25px; color: #555;" th:href="@{/api/{username}/material(username=${username})}">Material</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" style="font-size:25px; color: #555;" th:href="@{/api/{username}/quiz(username=${username})}">Quiz</a>
-      </li>
-    </ul>
-  </div>
-  <a th:href="@{/api/{username}/dashboard(username=${username})}" class="btn btn-outline-primary my-2 my-sm-0 d-flex align-items-center">
-    <img src="/account.png" alt="Profile Photo" class="rounded-circle" width="30" height="30">
-  </a>
-</nav>
+<body style="background-color: #B0C4DE" layout:fragment="content">
 <div class="container mt-4">
   <object data="/pythonBeginner.pdf" type="application/pdf" width="100%" height="800px">
     Your browser does not support PDFs.
