--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,46 +15,56 @@
 <div class="container mt-4">
   <div class="row justify-content-center" style="margin-top:25px;">
     <div class="col-md-6">
-      <h2 style="text-align: center">Sign Up</h2>
-      <div th:if="${errorMessage}" class="alert alert-danger d-flex align-items-center">
-        <img src="/error.png" alt="Error" width="20" height="20" class="mr-2">
-        <span th:text="${errorMessage}"></span>
+      <div class="card" style="border-radius: 20px">
+        <div class="card-header text-center">
+          <h2>Sign Up</h2>
+        </div>
+        <div class="card-body">
+          <div th:if="${errorMessage}" class="alert alert-danger d-flex align-items-center">
+            <img src="/error.png" alt="Error" width="20" height="20" class="mr-2">
+            <span th:text="${errorMessage}"></span>
+          </div>
+          <form th:action="@{/api/signup}" method="post" th:object="${user}">
+            <div class="form-group">
+              <label for="username">Username:</label>
+              <input type="text" class="form-control" id="username" th:field="*{username}" required>
+            </div>
+            <div class="form-group">
+              <label for="firstName">First Name:</label>
+              <input type="text" class="form-control" id="firstName" th:field="*{firstName}" required>
+            </div>
+            <div class="form-group">
+              <label for="lastName">Last Name:</label>
+              <input type="text" class="form-control" id="lastName" th:field="*{lastName}" required>
+            </div>
+            <div class="form-group">
+              <label for="email">Email:</label>
+              <input type="email" class="form-control" id="email" th:field="*{email}" required>
+            </div>
+            <div class="form-group">
+              <label for="password">Password:</label>
+              <input type="password" class="form-control" id="password" th:field="*{password}" required>
+            </div>
+            <p>Please select your level:</p>
+            <div class="form-group">
+              <input type="radio" id="beginner" name="skillLevel" value="BEGINNER" th:field="*{skillLevel}" required>
+              <label for="beginner">Beginner</label><br>
+
+              <input type="radio" id="intermediate" name="skillLevel" value="INTERMEDIATE" th:field="*{skillLevel}" required>
+              <label for="intermediate">Intermediate</label><br>
+
+              <input type="radio" id="pro" name="skillLevel" value="PRO" th:field="*{skillLevel}" required>
+              <label for="pro">Pro</label><br>
+            </div>
+            <button type="submit" class="btn btn-primary btn-block" style="font-size: 20px;">Sign Up</button>
+          </form>
+          <br>
+          <div>
+            <p class="text-center">Already have an account? <a th:href="@{/api/login}">Log in here.</a></p>
+          </div>
+          <p id="successMessage" style="display:none;" class="text-success text-center">Sign up successful!</p>
+        </div>
       </div>
-      <form th:action="@{/api/signup}" method="post" th:object="${user}">
-        <div class="form-group">
-          <label for="username">Username:</label>
-          <input type="text" class="form-control" id="username" th:field="*{username}" required>
-        </div>
-        <div class="form-group">
-          <label for="firstName">First Name:</label>
-          <input type="text" class="form-control" id="firstName" th:field="*{firstName}" required>
-        </div>
-        <div class="form-group">
-          <label for="lastName">Last Name:</label>
-          <input type="text" class="form-control" id="lastName" th:field="*{lastName}" required>
-        </div>
-        <div class="form-group">
-          <label for="email">Email:</label>
-          <input type="email" class="form-control" id="email" th:field="*{email}" required>
-        </div>
-        <div class="form-group">
-          <label for="password">Password:</label>
-          <input type="password" class="form-control" id="password" th:field="*{password}" required>
-        </div>
-        <p>Please select your level:</p>
-        <div class="form-group">
-          <input type="radio" id="beginner" name="skillLevel" value="BEGINNER" th:field="*{skillLevel}" required>
-          <label for="beginner">Beginner</label><br>
-
-          <input type="radio" id="intermediate" name="skillLevel" value="INTERMEDIATE" th:field="*{skillLevel}" required>
-          <label for="intermediate">Intermediate</label><br>
-
-          <input type="radio" id="pro" name="skillLevel" value="PRO" th:field="*{skillLevel}" required>
-          <label for="pro">Pro</label><br>
-        </div>
-        <button type="submit" class="btn btn-primary btn-block" style="font-size: 20px;">Sign Up</button>
-      </form>
-      <p id="successMessage" style="display:none;" class="text-success text-center">Sign up successful!</p>
     </div>
   </div>
 </div>
@@ -65,3 +74,4 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
+
