--- a/src/main/resources/templates/Layouts/navbar.html
+++ b/src/main/resources/templates/Layouts/navbar.html
@@ -10,7 +10,7 @@
           <a class="nav-link" style="font-size:25px; color: #555;" th:href="@{/api/{username}/material(username=${username})}">Material</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" style="font-size:25px; color: #555;" th:href="@{/api/{username}/quiz(username=${username})}">Quiz</a>
+          <a class="nav-link" style="font-size:25px; color: #555;" th:href="@{/api/{username}/quizzes(username=${username})}">Quiz</a>
         </li>
       </ul>
     </div>
