--- a/src/main/resources/templates/quizzes.html
+++ b/src/main/resources/templates/quizzes.html
@@ -10,7 +10,7 @@
     <h1>Select a Quiz</h1>
     <div class="list-group">
         <div th:each="quiz : ${quizzes}">
-            <a th:href="@{/api/{username}/quizzes/quiz/${quiz.id}(username=${username})}"
+            <a th:href="@{/api/{username}/quizzes/quiz/{quizId}(username=${username}, quizId=${quiz.id})}"
                th:text="${quiz.id}"
             class="list-group-item list-group-item-action"></a>
         </div>
