--- a/src/main/resources/templates/quizzes.html
+++ b/src/main/resources/templates/quizzes.html
@@ -11,7 +11,7 @@
     <div class="list-group">
         <div th:each="quiz : ${quizzes}">
             <a th:href="@{/api/{username}/quizzes/quiz/{quizId}(username=${username}, quizId=${quiz.id})}"
-               th:text="${quiz.id}"
+               th:text="'Quiz ' + ${quiz.id}"
             class="list-group-item list-group-item-action"></a>
         </div>
     </div>
