--- a/src/main/resources/templates/quiz.html
+++ b/src/main/resources/templates/quiz.html
@@ -35,7 +35,10 @@
 <div class="container quiz-container">
     <div class="card">
         <div class="card-header text-center">
-            <h1>Quiz <span th:text="${quizId}"></span></h1>
+            <h1>
+                <span th:if="${quizId == 0}" th:text="'Wrong Answers Quiz'"></span>
+                <span th:if="${quizId != 0}" th:text="'Quiz ' + ${quizId}"></span>
+            </h1>
         </div>
 
         <div class="card-body">
@@ -119,7 +122,6 @@
     // Function to submit the quiz
     function submitQuiz() {
         const userAnswers = [];
-
         // Gather user answers
         document.querySelectorAll('input[type="radio"]:checked').forEach((input) => {
             const questionId = parseInt(input.name, 10); // Use question ID from the name attribute
@@ -127,13 +129,17 @@
             userAnswers.push({ questionId: questionId, answer: selectedAnswer });
         });
         console.log(userAnswers)
+        console.log(quizId)
         // Sending user answers to the server
         fetch(`/api/${username}/quiz/submit`, {
             method: 'POST',
             headers: {
                 'Content-Type': 'application/json'
             },
-            body: JSON.stringify({ quizId: quizId, answers: userAnswers })
+            body: JSON.stringify({
+                quizId: quizId,
+                answers: userAnswers
+            })
         })
             .then(response => response.json())
             .then(data => {
