--- a/src/main/resources/templates/quizzes.html
+++ b/src/main/resources/templates/quizzes.html
@@ -8,12 +8,23 @@
 <body style="background-color: #B0C4DE" layout:fragment="content">
 <div class="container mt-5">
     <h1>Select a Quiz</h1>
+    <hr>
     <div class="list-group">
+        <div>
+            <a th:href="@{/api/{username}/quizzes/quiz/retry(username=${username})}"
+               th:text="'Retake questions you got wrong'"
+               class="list-group-item list-group-item-action"></a>
+        </div>
+        <br>
+        <h3>Beginner-level quizzes <span class="badge badge-secondary">Not completed</span></h3>
+        <br>
         <div th:each="quiz : ${quizzes}">
             <a th:href="@{/api/{username}/quizzes/quiz/{quizId}(username=${username}, quizId=${quiz.id})}"
                th:text="'Quiz ' + ${quiz.id}"
             class="list-group-item list-group-item-action"></a>
         </div>
+        <br>
+        <h3>To unlock quizzes from other levels, please complete previous</h3>
     </div>
 </div>
 </body>
